--- a/css/styles.css
+++ b/css/styles.css
@@ -137,8 +137,8 @@ body {
     display: grid;
     margin-left: auto;
     margin-right: auto;
-    grid-template-columns: 30% 1fr 1fr;
-    grid-template-rows: 25% repeat(2, 1fr) 15%;
+    grid-template-columns: 70% 1fr;
+    grid-template-rows: 15% repeat(2, 1fr) 30%;
     grid-gap: 0.8rem;
 }
 
@@ -155,7 +155,7 @@ h1 {
 header {
     background-color: #4640f2;
     grid-row: 1 / 2;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -168,11 +168,24 @@ section {
 .content-1 {
     background-color: #4640f2;
     grid-row: 2 / 3;
-    grid-column: 2 / 4;
+    grid-column: 1 / 2;
+}
+
+.content-2 {
+    background-color: aquamarine;
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+
+}
+
+.content-3 {
+    background-color: aqua;
+    grid-row: 2 / 4;
+    grid-column: 2 / 3;
 }
 
 footer {
     background-color: #ffffff;
     grid-row: 4 / 5;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
 }
