--- a/css/styles.css
+++ b/css/styles.css
@@ -10,12 +10,12 @@ div,
 span,
 object,
 iframe,
-h1,
+/*h1,
 h2,
 h3,
 h4,
 h5,
-h6,
+h6,*/
 p,
 blockquote,
 a,
@@ -120,6 +120,12 @@ body {
     -webkit-text-size-adjust: none;
 }
 
+/* Variables */
+
+:root {
+    --brand-color: #4640f2;
+}
+
 /* Box Model */
 
 *,
@@ -139,27 +145,51 @@ body {
     margin-right: auto;
     grid-template-columns: 70% 1fr;
     grid-template-rows: 15% repeat(2, 1fr) 30%;
-    grid-gap: 0.8rem;
+    grid-gap: 0rem;
+    
 }
 
 body {
-    font-family: "OverpassMono", monospace;
+    font-family: 'OverpassMono', monospace;
+    font-size: 14px;
+    font-weight: 400;
+    color: #ffffff;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: 0px;
+    background-color: var(--brand-color);
 }
 
-h1 {
-    font-size: 4em;
-    font-weight: 600;
-    color: #ffffff;
-}
 
 header {
-    background-color: #4640f2;
     grid-row: 1 / 2;
-    grid-column: 1 / 3;
+    grid-column: 1 / -1;
     display: flex;
     flex-direction: column;
     text-align: center;
 }
+
+h1 {
+    font-weight: bold;
+    font-size: 36px;
+    color: #ffffff;
+    -webkit-text-stroke: 1px #ffffff;
+}
+
+
+h2 {
+    font-size: 18px;
+    font-weight: bold;
+    color: var(--brand-color);
+  }
+
+h3 {
+    font-size: 14px;
+    font-weight: bold;
+    color: #ffffff;
+  }  
+
 
 section {
     text-align: left;
@@ -167,10 +197,11 @@ section {
 
 .content-1 {
     background-color: #4640f2;
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+    grid-column: 1 / 3;
 }
 
+/*
 .content-2 {
     background-color: aquamarine;
     grid-row: 3 / 4;
@@ -183,9 +214,15 @@ section {
     grid-row: 2 / 4;
     grid-column: 2 / 3;
 }
+*/
+
+button {
+    grid-area: footer;
+}
 
 footer {
     background-color: #ffffff;
+    color: var(--brand-color);
     grid-row: 4 / 5;
-    grid-column: 1 / 3;
+    grid-column: 1 / -1;
 }
