--- a/css/styles.css
+++ b/css/styles.css
@@ -143,14 +143,13 @@ body {
     display: grid;
     margin-left: auto;
     margin-right: auto;
-    grid-template-columns: 70% 1fr;
-    grid-template-rows: 15% repeat(2, 1fr) 30%;
+    grid-template-rows: 2fr 1fr;
     grid-gap: 0rem;
     
 }
 
 body {
-    font-family: 'OverpassMono', monospace;
+    font-family: 'Overpass Mono';
     font-size: 14px;
     font-weight: 400;
     color: #ffffff;
@@ -161,6 +160,14 @@ body {
     background-color: var(--brand-color);
 }
 
+main {
+    grid-row: 1/2;
+    display: grid;
+    grid-template-columns: 70% 1fr;
+    grid-template-rows: 15% repeat(2, 1fr);
+    padding-top: 69px;
+    padding-left: 119px;
+}
 
 header {
     grid-row: 1 / 2;
@@ -226,8 +233,9 @@ section {
 
 .content-1 {
     background-color: #4640f2;
-    grid-row: 2 / 4;
+    grid-row: 2 / 3;
     grid-column: 1 / 3;
+
 }
 
 /*
@@ -266,6 +274,5 @@ button {
 footer {
     background-color: #ffffff;
     color: var(--brand-color);
-    grid-row: 4 / 5;
-    grid-column: 1 / -1;
+    grid-row: 2 / 3;
 }
