--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ body {
     font-stretch: normal;
     line-height: normal;
     letter-spacing: 0px;
-    background-color: var(--brand-color);
+
 }
 
 main {
@@ -167,6 +167,8 @@ main {
     grid-template-rows: 15% repeat(2, 1fr);
     padding-top: 69px;
     padding-left: 119px;
+    background: linear-gradient(114deg, rgba(92,91,255, 0.7), 
+    rgba(70,64,242, 0.7)), url('../assets/bg-header.svg');
 }
 
 header {
@@ -232,7 +234,6 @@ section {
 }
 
 .content-1 {
-    background-color: #4640f2;
     grid-row: 2 / 3;
     grid-column: 1 / 3;
 
