--- a/css/styles.css
+++ b/css/styles.css
@@ -167,8 +167,10 @@ main {
     grid-template-rows: 15% repeat(2, 1fr);
     padding-top: 69px;
     padding-left: 119px;
+    padding-right: 97px;
     background: linear-gradient(114deg, rgba(92,91,255, 0.7), 
     rgba(70,64,242, 0.7)), url('../assets/bg-header.svg');
+    background-size: cover;
 }
 
 header {
@@ -198,9 +200,15 @@ ul {
     height: 44px;
   }
 
+  ul.social.icons {
+      display: flex;
+      justify-content: flex-end;
+  }
+
   ul.social.icons li {
     display: inline-block;
-    padding: 0 0 0 1em;
+    padding: 0 0 0 40px;
+    width: 100px;
   }
 
 .social.icons img {
@@ -210,17 +218,21 @@ ul {
 
 h1 {
     font-weight: bold;
-    font-size: 36px;
-    color: #ffffff;
+    font-size: 56px;
     -webkit-text-stroke: 1px #ffffff;
 }
 
 
 h2 {
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 300;
     color: var(--brand-color);
+    margin: 20px 0 20px 0;
   }
+
+.inverse {
+    color: #ffffff;  
+ } 
 
 h3 {
     font-size: 14px;
@@ -261,14 +273,20 @@ button {
     appearance: none;
     outline: 0;
     text-decoration: none;
-    text-transform: none;
-    font-size: 16px;
-    font-weight: bold;
+    text-transform: uppercase;
+    font-family: 'Overpass Mono';
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 0px;
     color: var(--brand-color);
+    width: 245px;
+    height: 56px;
     background-color: #ffffff;
     border-style: none;
     border-radius: 39.5px;
     box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.1);
+    padding-top: 0.2em;
+    margin: 20px 0 20px 0;
   
 }
 
