--- a/css/styles.css
+++ b/css/styles.css
@@ -207,8 +207,8 @@ ul {
 
   ul.social.icons li {
     display: inline-block;
-    padding: 0 0 0 40px;
-    width: 100px;
+    padding: 0 0 0 3em;
+    width: 85px;
   }
 
 .social.icons img {
@@ -294,4 +294,11 @@ footer {
     background-color: #ffffff;
     color: var(--brand-color);
     grid-row: 2 / 3;
+    padding-left: 119px;
+    padding-right: 97px;
+    padding-top: 65px;
+}
+
+footer h2 {
+    font-weight: 600;
 }
