--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -274,6 +274,7 @@ button {
     outline: 0;
     text-decoration: none;
     text-transform: uppercase;
+    cursor: pointer;
     font-family: 'Overpass Mono';
     font-size: 18px;
     font-weight: 600;
@@ -296,6 +297,7 @@ footer {
     grid-row: 2 / 3;
     display: grid;
     grid-template-rows: 1fr 20%;
+    padding-top: 65px;
 }
 
 footer h2 {
@@ -305,7 +307,6 @@ footer h2 {
 .contacts, .copyright {
     padding-left: 119px;
     padding-right: 97px;
-    padding-top: 65px;
 }
 
 .contact-info img {
@@ -313,6 +314,50 @@ footer h2 {
     height: 48px;
 }
 
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    margin: 64px auto;
+    
+}
+.contact-info li {
+    display: flex;  
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+li div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 2px 0 0 20px;
+}
+
+div>h3 {
+    color: var(--brand-color);
+    margin: 0 0 10px;
+    
+}
+
 .copyright {
     background: #fafafa;
+    color: #959595;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.copyright li {
+    width: auto;
+    height: auto;
+}
+
+
+a, a:hover {
+    text-decoration: none;
+    color: var(--brand-color);
+  }
+.copyright a {
+    color: #959595;
 }
