Initial responsive styles have been added.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -153,7 +153,7 @@ body {
     display: grid;
     margin-left: auto;
     margin-right: auto;
-    grid-template-rows: 3fr 6fr 1fr;
+    grid-template-rows: 3fr 6fr 96px;
     grid-template-columns: none;
     grid-gap: 0rem;
     
@@ -353,7 +353,7 @@ button {
     color: var(--brand-color);
     grid-row: 2 / 3;
     display: grid;
-    grid-template-rows: 1fr 20%;
+    grid-template-rows: 1fr 96px;
     padding-top: 65px;
 }
 #footer-2 {
@@ -382,6 +382,7 @@ footer ul {
     display: flex;
     justify-content: space-between;
     margin: 64px auto;
+    flex-shrink: 1;
     
 }
 .contact-info li {
