XSmall mobile view was fixed.

--- a/public/css/responsive-styles.css
+++ b/public/css/responsive-styles.css
@@ -4,15 +4,46 @@
 
 /*Breakpoints*/
 
+@media screen and (min-width: 2680px) {
+   .container {
+      max-width: 3000px;
+}
+
+}
+
+@media screen and (max-width: 1920px)
+
 @media screen and (max-width: 980px) {
 
 }
 
 @media screen and (max-width: 736px) {
+     
+    #main-1, #main-2, #header-2, .contacts, .copyright {
+        padding-left: 80px;
+    }
+
+    .icons-wrapper {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    ul.social.icons {
+        justify-content: flex-start;
+    }
+    ul.social.icons li {
+        padding: 1em 3em 0 0;
+    }
+
+
     .contact-info {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
+    }
+
+    .contact-info li {
+        margin-bottom: 31px;
     }
 
     .copyright {
@@ -20,11 +51,49 @@
             flex-direction: column;
             justify-content: space-around;
             align-items: flex-start;
+    
 
         }
+
+        #page-1.container {
+            grid-template-rows: 1fr 2fr;
+        }
+    
+        #main-1 {
+            grid-template-rows: 15% 1fr;
+        }   
+
+   
 }
 
 @media screen and (max-width: 480px) {
-    
-        
+
+     #main-1, #main-2, #header-2, .contacts, .copyright {
+        padding: 20px 40px;
+    }
+
+    .logo img {
+        width: 121px;
+        height: 24px;
+      }
+
+    .social.icons img {
+        width: 24px;
+        height: 24px;
+    }  
+   
+    #footer-1 {
+        padding-top: 0px;
+    }
+
+    h1 {
+        font-size: 36px;
+    }
+
+    button {
+        width: 211px;
+        height: 40px;
+        font-size: 16px;
+    }
+
 }
