--- a/public/css/responsive-styles.css
+++ b/public/css/responsive-styles.css
@@ -7,107 +7,83 @@
 @media screen and (min-width: 2680px) {
    .container {
       max-width: 3000px;
+    }
 }
 
-}
+@media screen and (max-width: 1920px) {}
 
-@media screen and (max-width: 1920px) {
-
-}
-
-@media screen and (max-width: 980px) {
-
-
-}
+@media screen and (max-width: 980px) {}
 
 @media screen and (max-width: 736px) {
-
-
-     
     #main-1, #main-2, #header-2, .contacts, .copyright {
         padding-left: 80px;
-     
     }
-
    .icons-wrapper {
         flex-direction: row;
         justify-content: space-between;
-    }
+   }
     ul.social.icons {
        display: none;
 
-}
-
+    }
     ul.deck {
         display: flex;
         justify-content: flex-end;
     }
-
     ul.deck li {
         display: inline-block;
         width: 40px;
-      }
-
-
+    }
     .contact-info {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
     }
-
     .contact-info a {
         margin-bottom: 31px;
     }
-
     .copyright {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: flex-start;
-    
-
-        }
-
-        #page-1.container {
-            grid-template-rows: 1fr 2fr;
-        }
-    
-        #main-1 {
-            grid-template-rows: 15% 1fr;
-        }   
-
-   
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: flex-start;
+    }
+    #page-1.container {
+        grid-template-rows: 1fr 2fr;
+    }
+    #main-1 {
+        grid-template-rows: 15% 1fr;
+    }
 }
 
 @media screen and (max-width: 480px) {
-
      #main-1, #main-2, #header-2, .contacts, .copyright {
         padding: 20px 40px;
     }
-
+    .copyright li:first-child {
+        padding: 20px 0;
+    }
+    .copyright li:first-child {
+        padding-bottom: 20px;
+    }
     .logo img {
         width: 121px;
         height: 24px;
-      }
-
+    }
     .social.icons img {
         width: 24px;
         height: 24px;
-    }  
-
+    }
     ul.deck img {
         width: 40px;
         height: 24px;
     }
-   
     #footer-1 {
         padding-top: 0px;
     }
-
     h1 {
         font-size: 36px;
     }
-
     button {
         width: 211px;
         height: 40px;
@@ -115,88 +91,81 @@
     }
 
 
-/* Over, attemp 1 */
-/*
-    .overlay {
-        position: absolute;
-        bottom: 100%;
-        left: 0;
-        right: 0;
-        overflow: hidden;
-        width: 100%;
-        height: 100%;
-        transition: .5s ease;
-        background-color: rgba(0, 0, 0, 0.2);
-      }
-      
-      ul.deck:focus .overlay,
-      ul.deck:hover .overlay {
-        height: 100%;
-        width: 100%;
-        bottom: 0;
-      }
-
-    .menu {
-    position: absolute;
-    overflow: hidden;
-    right: 1%;
-    left: 1%;
-    top: 1%;
-    transition: .5s ease;
-    background-color: #6461ff;
-    width: 98%;
-    height: 218px;
-
-    }   
+    /* Over, attemp 1 */
     /*
+        .overlay {
+            position: absolute;
+            bottom: 100%;
+            left: 0;
+            right: 0;
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+            transition: .5s ease;
+            background-color: rgba(0, 0, 0, 0.2);
+          }
+
+          ul.deck:focus .overlay,
+          ul.deck:hover .overlay {
+            height: 100%;
+            width: 100%;
+            bottom: 0;
+          }
+
+        .menu {
+        position: absolute;
+        overflow: hidden;
+        right: 1%;
+        left: 1%;
+        top: 1%;
+        transition: .5s ease;
+        background-color: #6461ff;
+        width: 98%;
+        height: 218px;
+
+        }
+        /*
 
 
-/* Over, attemp 2 */
+    /* Over, attemp 2 */
 
-.overlay {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-left: 4%; /* Location of menu*/
-    padding-right: 4%; /* Location of menu */
-    padding-top: 4%; /* Location of menu */
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.2);
-}
-
-menu {
-  position: relative;
-  background-color: #6461ff;
-  /*padding: 0;*/
-  border-radius: 8px;
-  box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.1);
-  width: auto;
-  height: 218px;
-  -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.4s;
-  animation-name: animatetop;
-  animation-duration: 0.4s  
-}
-
-
-ul.deck:focus .overlay,
-ul.deck:hover .overlay {
+    .overlay {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-left: 4%; /* Location of menu*/
+        padding-right: 4%; /* Location of menu */
+        padding-top: 4%; /* Location of menu */
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0,0,0,0.2);
+    }
+    menu {
+      position: relative;
+      background-color: #6461ff;
+      /*padding: 0;*/
+      border-radius: 8px;
+      box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.1);
+      width: auto;
+      height: 218px;
+      -webkit-animation-name: animatetop;
+      -webkit-animation-duration: 0.4s;
+      animation-name: animatetop;
+      animation-duration: 0.4s
+    }
+    ul.deck:focus .overlay,
+    ul.deck:hover .overlay {
         display: inline-block;
-      }
-
-      @-webkit-keyframes animatetop {
+    }
+    @-webkit-keyframes animatetop {
         from {top:-200px; opacity:0} 
         to {top:0; opacity:1}
-      }
-      
-      @keyframes animatetop {
+    }
+    @keyframes animatetop {
         from {top:-200px; opacity:0}
         to {top:0; opacity:1}
-      }
-
-
+    }
 }
