--- a/public/css/responsive-styles.css
+++ b/public/css/responsive-styles.css
@@ -22,6 +22,9 @@
         flex-direction: row;
         justify-content: space-between;
    }
+    .content-1 {
+        margin-bottom: 60px;
+    }
     ul.social.icons {
        display: none;
     }
@@ -52,7 +55,7 @@
 
 @media screen and (max-width: 480px) {
      #main-1, #main-2, #header-2, .contacts, .copyright {
-        padding: 20px 40px 60px;
+        padding: 20px 40px 40px;
     }
     .copyright li:first-child {
         padding: 20px 0;
@@ -69,7 +72,7 @@
         height: 24px;
     }
     #footer-1 {
-        padding-top: 0px;
+        padding-top: 0;
     }
     h1 {
         font-size: 36px;
