--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -74,6 +74,7 @@ video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+    /*font-family: OverpassMono;*/
 }
 
 article,
@@ -198,7 +199,7 @@ a.modal-line-link:hover {
     height: 32px;
 }
 .modal-text-link {
-    font-family: OverpassMono;
+    /*font-family: OverpassMono;*/
     font-size: 14px;
     font-style: normal;
     font-stretch: normal;
@@ -290,7 +291,6 @@ body {
     font-stretch: normal;
     line-height: normal;
     letter-spacing: 0px;
-
 }
 
 #main-1 {
@@ -417,9 +417,16 @@ article:last-child {
 .content-1 {
     grid-row: 2 / 3;
     grid-column: 1 / 3;
-
 }
-
+.content-1 a button {
+    font-weight: 700;
+    margin-top: 60px;
+}
+.content-1 h1 {
+    font-weight: bold;
+    font-size: 56px;
+    -webkit-text-stroke: 1px #ffffff;
+}
 /*
 .content-2 {
     background-color: aquamarine;
@@ -444,7 +451,7 @@ button {
     text-decoration: none;
     text-transform: uppercase;
     cursor: pointer;
-    font-family: 'Overpass Mono';
+    /*font-family: 'Overpass Mono';*/
     font-size: 18px;
     font-weight: 700;
     letter-spacing: 0px;
