--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,16 @@
 /*SnappMobile */
 
 /*September 2018*/
+@font-face {
+    font-family: 'silkaregular';
+    src: url('../assets/fonts/silka-regular-webfont.eot');
+    src: url('../assets/fonts/silka-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../assets/fonts/silka-regular-webfont.woff2') format('woff2'),
+         url('../assets/fonts/silka-regular-webfont.woff') format('woff'),
+         url('../assets/fonts/silka-regular-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 /* Reset default*/
 
@@ -286,7 +296,7 @@ body {
 }
 
 body {
-    font-family: 'Overpass Mono';
+    font-family: 'silkaregular';
     font-size: 14px;
     font-weight: 400;
     color: var(--white-color);
@@ -474,7 +484,7 @@ button {
     text-decoration: none;
     text-transform: uppercase;
     cursor: pointer;
-    font-family: 'Overpass Mono';
+    font-family: 'silkaregular';
     font-size: 12px;
     font-weight: 600;
     letter-spacing: 8%;
