--- a/css/styles.css
+++ b/css/styles.css
@@ -450,6 +450,15 @@ article:last-child {
 .content-1 {
     grid-row: 2 / 3;
     grid-column: 1 / 3;
+    -webkit-user-select: none; /* Chrome/Safari */ 
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+ */
+
+    /* The rule below is not implemented in browsers yet */
+    -o-user-select: none;
+
+    /* The rule below is implemented in most browsers by now */
+    user-select: none;
 }
 .content-1 a button {
     font-weight: 700;
